--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,13 @@ title: Arieswaran | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
 url: "https://arieswaran.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
-baseurl: "/Portfolio"
+baseurl: ""
 
 # OPTIONAL CHANGES
 ## Specify the theme using any of the css files in css/techfolio-theme
-techfolio-theme: default.css
+techfolio-theme: skyblue.css
 ## Specify the formatting for triple backquote code sections.
-rouge-theme: github.css
+rouge-theme: colorful.css
 
 # DON'T CHANGE THE FOLLOWING (unless you know what you're doing)
 markdown: kramdown
